@@ -41,7 +41,6 @@
 
 /* begin GNULIB headers */
 #include "exit.h"
-#include "getdate.h"
 #include "vasnprintf.h"
 #include "xalloc.h"
 /* end GNULIB headers */
@@ -536,6 +535,13 @@ void write_letter (struct file_info *finfo, int letter);
 int xcmp (const char *file1, const char *file2);
 int yesno (void);
 void *valloc (size_t bytes);
+
+/* Need this until we back out the get_date () proto again and use a current
+ * version of getdate.y from GNULIB.
+ */
+#include "xtime.h"
+time_t get_date (char *date, struct timeb *now);
+
 int Create_Admin (const char *dir, const char *update_dir,
                   const char *repository, const char *tag, const char *date,
                   int nonbranch, int warn, int dotemplate);
