@@ -1,3 +1,8 @@
+2004-05-15  Derek Price  <derek@ximbiot.com>
+
+	* cvs.h, client.c, history.c, main.c, rcs.c, sanity.sh, server.c:
+	Back out get_date() changes from 2004-04-28.
+
 2004-05-14  Mark D. Baushke  <mdb@cvshome.org>
 
 	* sanity.sh (trailingslashes): During cleanup remove topfile,v to
